add message queue

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     build:
       context: ./auth
       dockerfile: Dockerfile
+    command: python manage.py runserver 0.0.0.0:8080
     ports:
       - 8080:8080
     depends_on:
@@ -13,8 +14,25 @@ services:
     build:
       context: ./customers
       dockerfile: Dockerfile
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
       - 8000:8000
+    depends_on:
+      - db
+
+  auth_queue:
+    build:
+      context: ./auth
+      dockerfile: Dockerfile
+    command: python consumer.py
+    depends_on:
+      - db
+
+  costomer_queue:
+    build:
+      context: ./customers
+      dockerfile: Dockerfile
+    command: python consumer.py
     depends_on:
       - db
 
