--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     command: python manage.py runserver 0.0.0.0:8080
     ports:
       - 8080:8080
+    env_file:
+      - .env
     depends_on:
       - db
 
@@ -17,6 +19,8 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - 8000:8000
+    env_file:
+      - .env
     depends_on:
       - db
 
