--- a/customers/pytest.ini
+++ b/customers/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = customers.settings
 python_files = tests.py test_*.py *_tests.py
-adopts = --cov --cov-report=html
+addopts = --cov --cov-report=html --nomigrations
